--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<nav>
 			<ul>
 			<!-- Appropiate file format for logo  -->				
-			  <li><img src="img/logo.png" alt="HTML Logo" /></li>
+			  <li><img src="img/logo.gif" alt="HTML Logo" /></li>
 			  <li id="home"><a href="/">Home</a></li>
 			  <li id="super"><a href="http://www.zeldman.com/superfriends/">Super Friends</a></li>
 			  <li id="html5"><a href="http://www.20thingsilearned.com/en-US">HTML5 Awesome</a></li>
